Annual Report: Remove hover effect from downloads

--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -352,21 +352,21 @@
 		<h2 class="pb-6 leading-9 text-center text-black headline-2">Download Past Annual Reports</h2>
 		<div class="grid max-w-lg grid-flow-row gap-8 mx-auto place-content-center">
 
-			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black transition-transform border border-black rounded-full hover:scale-105"
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black transition-transform border border-black rounded-full"
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2023%20Tri-State%20Annual%20Report.pdf"
 					target="_blank" rel="noopener"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
 						alt="Arrow Down Icon" class="w-4 h-4 mt-1">Download 2023 Annual Report</a></p>
 
 
-			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black transition-transform border border-black rounded-full hover:scale-105"
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black transition-transform border border-black rounded-full"
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2022%20Tri-State%20Annual%20Report.pdf"
 					target="_blank" rel="noopener"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
 						alt="Arrow Down Icon" class="w-4 h-4 mt-1">Download 2022 Annual Report</a></p>
 
 
-			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black transition-transform border border-black rounded-full hover:scale-105"
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black transition-transform border border-black rounded-full"
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/Tri-State-Annual-Report-FY2021.pdf"
 					target="_blank" rel="noopener"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
