Annual Report: Disable CSS transition on parallax

--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -170,8 +170,8 @@
 				class="absolute max-w-xs transform -translate-x-1/2 top-10 left-1/2" alt="Lisa Tiffin">
 		</div>
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/ChartBG_web.png"
-			class="absolute z-0 opacity-20 top-1/2 -translate-y-1/2 -translate-x-1/2 left-1/2 max-w-[200%] md:max-w-full"
-			alt="Background Image" data-parallax-image="absolute opacity-20">
+			class="absolute z-0 opacity-20 top-1/2 -translate-y-1/2 -translate-x-1/2 left-1/2 max-w-[200%] md:max-w-full transition-none"
+			alt="Background Image" data-parallax-image="absolute opacity-20 transition-none">
 	</div>
 	<div class="relative overflow-hidden flex flex-col text-white md:flex-row-reverse md:aspect-[2/1] xl:aspect-[7/3]">
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Sun.svg"
@@ -244,7 +244,8 @@
 	<div class="grid grid-cols-1 md:grid-cols-2">
 		<div class="overflow-hidden aspect-square md:aspect-auto md:relative" data-parallax-container>
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/trucks-parallax-v2-1600h.png"
-				class="object-cover w-full h-full md:absolute" alt="Trucks" data-parallax-image="absolute">
+				class="object-cover w-full h-full transition-none md:absolute" alt="Trucks"
+				data-parallax-image="absolute transition-none">
 		</div>
 		<div class="flex flex-col gap-4 p-10 pt-20 md:py-20">
 			<h2 class="leading-9 text-black headline-2">Accelerating our transition</h2>
