Annual Report: Change spinning sun to css animation

--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -177,7 +177,7 @@
 	</div>
 	<div class="relative overflow-hidden flex flex-col text-white md:flex-row-reverse md:aspect-[2/1] xl:aspect-[7/3]">
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Sun.svg"
-			class="absolute z-10 w-1/2 transition-none top-4 left-2 opacity-10 md:w-1/3" alt="" data-animate-sun
+			class="absolute z-10 w-1/2 transition-none top-4 left-2 opacity-10 md:w-1/3 animate-spin-slow" alt=""
 			style="transform-origin: 46% 50%;">
 
 		<div class="relative z-20 flex flex-col items-center gap-4 p-10 pt-20 md:justify-center md:flex-none md:w-1/2">
