Media: Final adjustments

--- a/media.htm
+++ b/media.htm
@@ -27,80 +27,80 @@
 </head>
 
 <body id="main">
-	<div class="grid sm:grid-cols-2">
-		<div
-			class="relative grid gap-8 p-12 text-center sm:col-span-2 sm:aspect-video sm:place-content-center md:aspect-auto md:py-32 lg:px-48">
+	<div
+		class="relative grid gap-8 p-12 text-center sm:aspect-video sm:place-content-center md:aspect-auto md:py-32 lg:px-48">
 
-			<h2 class="text-3xl text-wrap-balance">Telling our stories</h2>
-			<p class="text-wrap-balance">We are a not-for-profit power supply cooperative of 44 members, including 41
-				electric distribution
-				cooperatives and public power districts in four states that together deliver reliable, affordable and
-				responsible power to more than a million electricity consumers across nearly 200,000 square miles of the
-				West.</p>
-			<p><a href="#" class="text-black">Request to access our press kit</a></p>
-		</div>
+		<h2 class="font-serif text-3xl font-light text-wrap-balance">Telling our stories</h2>
+		<p class="text-lg text-wrap-balance">We are a not-for-profit power supply cooperative of 44 members, including
+			41
+			electric distribution
+			cooperatives and public power districts in four states that together deliver reliable, affordable and
+			responsible power to more than a million electricity consumers across nearly 200,000 square miles of the
+			West.</p>
+		<p><a href="#" class="text-lg text-black">Request to access our press kit</a></p>
+	</div>
+	<div class="grid sm:grid-cols-2">
 		<div class="relative grid gap-8 px-12 py-8 text-center aspect-[10/9] place-content-center sm:col-span-2 sm:aspect-auto sm:py-32"
 			box>
 			<div class="relative z-10 grid gap-8 text-xl text-white max-w-72">
-
-				<a href="/features" class="px-8 py-4 text-2xl text-white no-underline border rounded-full">Features</a>
+				<a href="/features"
+					class="px-8 py-4 text-2xl text-white no-underline border-2 rounded-full hover:text-white">Features</a>
 				<p>Stories highlighting <span class="inline-block">Tri-State</span> departments, employees, members and
 					community events</p>
 			</div>
 			<img src="https://tristate.coop/sites/default/files/images/media-page/kids-in-a-field-1200x800.jpg"
 				alt="Kids in a field at sunrise" class="absolute left-0 z-0 object-cover w-full h-full t-0">
 		</div>
-		<div class="relative grid gap-8 px-12 py-8 text-center aspect-[10/9] place-content-center" box>
+		<div class="relative grid gap-8 px-12 py-8 text-center aspect-[10/9] place-content-center">
 			<div class="relative z-10 grid gap-8 text-xl text-white max-w-72">
 				<a href="/resources"
-					class="px-8 py-4 text-2xl text-white no-underline border rounded-full">Resources</a>
+					class="px-8 py-4 text-2xl text-white no-underline border-2 rounded-full hover:text-white">Resources</a>
 				<p>An in-depth understanding of our strategic priorities through education and research</p>
 			</div>
 			<img src="https://tristate.coop/sites/default/files/images/media-page/worker-at-machine-800x800.jpg"
 				alt="Worker at a machine" class="absolute left-0 z-0 object-cover w-full h-full t-0">
 		</div>
-		<div class="relative grid gap-8 px-12 py-8 text-center aspect-[10/9] place-content-center bg-[#D0D2D4]" box>
+		<div class="relative grid gap-8 px-12 py-8 text-center aspect-[10/9] place-content-center bg-[#D0D2D4]">
 			<div class="relative z-10 grid gap-8 text-xl max-w-72">
-
 				<a href="/blog"
-					class="px-8 py-4 text-2xl text-black no-underline border border-black rounded-full">Blog</a>
+					class="px-8 py-4 text-2xl text-black no-underline border-2 border-black rounded-full hover:text-white">Blog</a>
 				<p>Energy efficiency tips and seasonal topics within our industry</p>
 			</div>
 		</div>
-
-		<div class="relative grid gap-8 px-12 py-8 text-center aspect-[10/9] place-content-center bg-[#08588D]" box>
+		<div class="relative grid gap-8 px-12 py-8 text-center aspect-[10/9] place-content-center sm:order-last">
 			<div class="relative z-10 grid gap-8 text-xl text-white max-w-72">
-
-				<a href="/News" class="px-8 py-4 text-2xl text-white no-underline border rounded-full">News</a>
+				<a href="/the-current-newsletter"
+					class="px-8 py-4 text-2xl text-white no-underline border-2 rounded-full hover:text-white">The
+					Current</a>
+				<p>Monthly newsletter highlighting Tri-State and member news and events</p>
+			</div>
+			<img src="https://tristate.coop/sites/default/files/images/media-page/hands-keyboard-with-mobile-phone-800x800.jpg"
+				alt="Hands over keyboard with mobile phone" class="absolute left-0 z-0 object-cover w-full h-full t-0">
+		</div>
+		<div class="relative grid gap-8 px-12 py-8 text-center aspect-[10/9] place-content-center bg-[#08588D]">
+			<div class="relative z-10 grid gap-8 text-xl text-white max-w-72">
+				<a href="/News"
+					class="px-8 py-4 text-2xl text-white no-underline border-2 rounded-full hover:text-white">News</a>
 				<p>Important announcements and time-sensitive updates from <span class="inline-block">Tri-State</span>
 				</p>
 			</div>
 		</div>
 
-		<div class="relative grid gap-8 px-12 py-8 text-center aspect-[10/9] place-content-center" box>
-			<div class="relative z-10 grid gap-8 text-xl text-white max-w-72">
 
-				<a href="/the-current-newsletter"
-					class="px-8 py-4 text-2xl text-white no-underline border rounded-full">The Current</a>
-				<p>Stories highlighting our members and community events</p>
-			</div>
-			<img src="https://tristate.coop/sites/default/files/images/media-page/hands-keyboard-with-mobile-phone-800x800.jpg"
-				alt="Hands over keyboard with mobile phone" class="absolute left-0 z-0 object-cover w-full h-full t-0">
-		</div>
-		<div
-			class="relative grid gap-8 p-12 text-center sm:col-span-2 sm:aspect-video sm:place-content-center md:aspect-auto md:py-32 lg:px-48">
+	</div>
+	<div
+		class="relative grid gap-8 p-12 text-center sm:aspect-video sm:place-content-center md:aspect-auto md:py-32 lg:px-48">
 
-			<h2 class="text-3xl font-light">Media contacts</h2>
-			<div class="grid gap-8 sm:grid-cols-2">
-				<p>Lee Boughey<br>
-					Vice President, Communications<br>
-					303-254-3555<br>
-					lee.boughey@tristategt.org</p>
-				<p>Mark Stutz<br>
-					Public Relations Specialist<br>
-					303-254-3183<br>
-					mark.stutz@tristategt.org</p>
-			</div>
+		<h2 class="font-serif text-3xl font-light">Media contacts</h2>
+		<div class="grid gap-8 sm:grid-cols-2">
+			<p>Lee Boughey<br>
+				Vice President, Communications<br>
+				303-254-3555<br>
+				lee.boughey@tristategt.org</p>
+			<p>Mark Stutz<br>
+				Public Relations Specialist<br>
+				303-254-3183<br>
+				mark.stutz@tristategt.org</p>
 		</div>
 	</div>
 </body>
