Annual Report: Final adjustments

--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -89,7 +89,7 @@
 	</> -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Aleo&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_Rli8DIVnIKbjfXhlxva1M3yFKBDc26-qMFDXgVLNaEY.css" />
 	<link rel="stylesheet"
@@ -133,7 +133,7 @@
 
 		</div>
 		<div class="flex flex-col gap-4 p-12 lg:py-20 lg:pl-20 lg:pr-16 place-content-center">
-			<h2 class="leading-9 text-black headline-2">Our Momentum</h2>
+			<h2 class="font-normal leading-9 text-black headline-2">Our Momentum</h2>
 			<p>
 
 				“Watch our feet” has been our mantra, as we've committed to
@@ -158,7 +158,7 @@
 		<div class="z-10 flex flex-col gap-4 px-10 pt-20 text-white md:py-20 lg:p-20 place-content-center">
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/PlanningText.svg"
 				alt="Planning & Analytics" class="transition-none" data-animate-heading-planning>
-			<p>
+			<p class="font-normal leading-9 text-white headline-2 !text-3xl">
 				Tri-State is maintaining
 				reliability while retiring coal
 				and adding renewables.
@@ -193,7 +193,7 @@
 		</div>
 
 		<div class="z-20 flex flex-col justify-end gap-4 px-10 pb-20 md:flex-none md:w-1/2 lg:p-20">
-			<p class="leading-9 text-white headline-2">
+			<p class="font-normal leading-9 text-white headline-2 !text-3xl">
 				Tri-State is making a huge investment in clean energy by adding 1,250 MW of renewables and battery
 				storage.
 			</p>
@@ -225,7 +225,7 @@
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/LeadingText.svg"
 				alt="Leading the Conversation" class="transition-none" data-animate-heading-leading>
 
-			<p class="text-3xl leading-9 text-white headline-2 p-">
+			<p class="!text-3xl font-normal leading-9 text-white headline-2">
 				Learn how collaboration and
 				federal funding benefits both
 				members and end-consumers
@@ -250,7 +250,7 @@
 				data-parallax-image="absolute transition-none">
 		</div>
 		<div class="flex flex-col gap-4 p-10 pt-20 md:py-20">
-			<h2 class="leading-9 text-black headline-2">Accelerating our transition</h2>
+			<h2 class="font-normal leading-9 text-black headline-2">Accelerating our transition</h2>
 			<p>We have an ambitious plan focused on electric system resilience
 				and reduced costs. Built on a foundation of collaboration, our
 				plan is designed to benefit the electric consumers across our
@@ -296,7 +296,7 @@
 		<div
 			class="z-10 flex flex-col gap-4 px-10 pt-20 text-white place-content-center md:py-20 md:pl-0 md:flex-none md:w-1/2 ">
 
-			<h2 class="leading-9 text-white headline-2">We're bringing energy efficiency
+			<h2 class="font-normal leading-9 text-white headline-2">We're bringing energy efficiency
 				within reach for members,
 				communities and homeowners</h2>
 			<p>
@@ -320,8 +320,8 @@
 		</div>
 		<div class="relative z-10 pt-10 aspect-square md:aspect-auto md:flex-none md:w-1/2">
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/E&SLogo.svg"
-				class="absolute z-10 size-20 bottom-10 right-10 md:size-32 md:bottom-28 md:right-10"
-				alt="Electrify and Save Logo" data-animate-logo>
+				class="absolute z-10 size-20 bottom-10 left-10 md:size-32" alt="Electrify and Save Logo"
+				data-animate-logo>
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Pete.png"
 				class="absolute z-0 max-w-xs transform -translate-x-1/2 md:top-10 left-1/2" alt="Pete">
 		</div>
@@ -352,28 +352,34 @@
 	</div>
 
 	<div class="bg-[#FCB540] p-12 py-16">
-		<h2 class="pb-6 leading-9 text-center text-black headline-2">Download Past Annual Reports</h2>
+		<h2 class="pb-6 font-normal leading-9 text-center text-black headline-2">Download Past Annual Reports</h2>
 		<div class="grid max-w-lg grid-flow-row gap-8 mx-auto place-content-center">
 
-			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black transition-transform border border-black rounded-full"
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline transition-transform border border-black rounded-full"
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2023%20Tri-State%20Annual%20Report.pdf"
 					target="_blank" rel="noopener"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
-						alt="Arrow Down Icon" class="w-4 h-4 mt-1">Download 2023 Annual Report</a></p>
+						alt="Arrow Down Icon" class="w-4 h-4 mt-1"><span class="hideme sm:inline">Download</span>
+					2023
+					Annual Report</a></p>
 
 
-			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black transition-transform border border-black rounded-full"
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline transition-transform border border-black rounded-full"
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2022%20Tri-State%20Annual%20Report.pdf"
 					target="_blank" rel="noopener"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
-						alt="Arrow Down Icon" class="w-4 h-4 mt-1">Download 2022 Annual Report</a></p>
+						alt="Arrow Down Icon" class="w-4 h-4 mt-1"><span class="hideme sm:inline">Download</span>
+					2022
+					Annual Report</a></p>
 
 
-			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black transition-transform border border-black rounded-full"
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline transition-transform border border-black rounded-full"
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/Tri-State-Annual-Report-FY2021.pdf"
 					target="_blank" rel="noopener"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
-						alt="Arrow Down Icon" class="w-4 h-4 mt-1">Download 2021 Annual Report</a></p>
+						alt="Arrow Down Icon" class="w-4 h-4 mt-1"><span class="hideme sm:inline">Download</span>
+					2021
+					Annual Report</a></p>
 
 		</div>
 
