--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -175,7 +175,7 @@
 			class="absolute z-0 opacity-20 top-1/2 -translate-y-1/2 -translate-x-1/2 left-1/2 max-w-[200%] md:max-w-full transition-none"
 			alt="Background Image" data-parallax-image="absolute opacity-20 transition-none">
 	</div>
-	<div class="relative overflow-hidden flex flex-col text-white md:flex-row-reverse md:aspect-[2/1] xl:aspect-[7/3]">
+	<div class="relative overflow-hidden flex flex-col text-white md:flex-row-reverse md:aspect-[7/4] lg:aspect-[2/1]">
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Sun.svg"
 			class="absolute z-10 w-1/2 transition-none top-4 left-2 opacity-10 md:w-1/3 animate-spin-slow" alt=""
 			style="transform-origin: 46% 50%;">
@@ -192,7 +192,7 @@
 			</p>
 		</div>
 
-		<div class="z-20 flex flex-col justify-end gap-4 px-10 pb-20 md:flex-none md:w-1/2 lg:p-20">
+		<div class="z-20 flex flex-col justify-end gap-4 px-10 py-20 md:flex-none md:w-1/2 lg:p-20">
 			<p class="font-normal leading-9 text-white headline-2 !text-3xl">
 				Tri-State is making a huge investment in clean energy by adding 1,250 MW of renewables and battery
 				storage.
