Annual Report: Final Touches

--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -113,7 +113,7 @@
 	<div class="relative bg-[#FCB540] grid place-items-center aspect-[3/2] lg:aspect-[3/1] lg:overflow-hidden">
 		<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/MomentumText.svg" alt="Momentum"
 			class="z-10 max-w-2xl px-6 sm:hidden">
-		<div class="hideme sm:flex sm:z-10 ">
+		<div class="hideme sm:flex sm:z-[1]">
 
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/Mometext.svg" alt="Mome"
 				class="transition-none sm:h-28" data-animate-mome>
@@ -186,7 +186,7 @@
 			<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/ServingText.svg" class=""
 				alt="Serving Members">
 			<p>
-				<a href="https://tristate.coop/susan-hunter-annual-report-2023"
+				<a href="https://tristate.coop/expanding-solar-power-west"
 					class="font-normal text-white underline">Learn more about
 					Escalante Solar</a>
 			</p>
@@ -339,7 +339,7 @@
 				rebates a month</p>
 		</div>
 		<div class="grid grid-rows-[auto,1fr] gap-4 text-center">
-			<div class="text-5xl"><stat-value>50</stat-value>%</div>
+			<div class="text-5xl">+<stat-value>50</stat-value>%</div>
 			<p class="text-center">Compared to 2021, air-source heat pump rebate applications increased more than 50% in
 				2023</p>
 		</div>
