--- a/obr.htm
+++ b/obr.htm
@@ -122,14 +122,34 @@
 				Get started with On-Bill Repayment
 			</h2>
 			<p class="text-balance">
-				After you submit the for, you will receive communications primarily from the Collective Clean Energy
-				Fund and Zero Homes.
-				Be sure to monitor your email (including spam/junk folders) for important updates and information on
-				next steps.
+				To get started, select your co-op and complete the form below. Once you've submitted the form, you'll
+				receive
+				communications primarily from the Collective Clean Energy Fund and Zero Homes. Be sure to check your
+				email regularly,
+				including your spam and junk folders, for important updates and details on next steps.
 
 			</p>
 			<p>Have questions? Call <span class="inline-block">720-505-5877</span></p>
 		</div>
+		<div class="grid place-items-center">
+			<div class="relative">
+				<select class="text-lg p-2 mt-8" data-coop-select>
+					<option value="0">Select your provider</option>
+				</select>
+				<div class="size-8 mt-8 loading-spinner hidden" data-loading>
+
+					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="">
+						<path class="fa-secondary" opacity=".4"
+							d="M65.6 414.4c0 8.2 3.1 16.4 9.4 22.6c12.5 12.5 32.8 12.5 45.3 0l45.3-45.3c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L75 391.8c-6.2 6.2-9.4 14.4-9.4 22.6zM224 416l0 64c0 17.7 14.3 32 32 32s32-14.3 32-32l0-64c0-17.7-14.3-32-32-32s-32 14.3-32 32zM346.5 120.2c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L437 120.2c12.5-12.5 12.5-32.8 0-45.3c-6.2-6.2-14.4-9.4-22.6-9.4s-16.4 3.1-22.6 9.4l-45.3 45.3zm0 226.3c-12.5 12.5-12.5 32.8 0 45.3L391.8 437c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-45.3-45.3c-12.5-12.5-32.8-12.5-45.3 0zM384 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32 14.3-32 32z" />
+						<path class="fa-primary"
+							d="M256 0c-17.7 0-32 14.3-32 32l0 64c0 17.7 14.3 32 32 32s32-14.3 32-32l0-64c0-17.7-14.3-32-32-32zM0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32 14.3-32 32zM120.2 75C107.7 62.5 87.5 62.5 75 75s-12.5 32.8 0 45.3l45.3 45.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L120.2 75z" />
+					</svg>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section style="background-color: #F5F5F5;">
+		<div data-zoho-container></div>
 	</section>
 
 
