--- a/obr.htm
+++ b/obr.htm
@@ -328,24 +328,76 @@
 			class="block items-center gap-2 rounded-full border px-4 py-2 font-normal no-underline transition-transform text-black text-center md:inline-flex">Apply
 			Now</a></div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+	integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+	crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"
+	integrity="sha512-2ImtlRlf2VVmiGZsjm9bEyhjGW4dU7B6TNwh/hx/iSByxNENtj3WVE6o/9Lj4TJeVXPi4bnOIMXFIJJAeufa0A=="
+	crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script>
+	// Dynamically add options to the existing select element
+	const obrFormOptions = [
+		{ label: 'Gunnison County Electric Assoc.', url: 'https://forms.zohopublic.com/dave77/form/CCEFOnBillElectrifyandSaveInterestFormGunnisonCoun/formperma/eaL0vRpEvSxnZ0SfUkbvcwk455RufgurFBcYNNdmFrI?zf_rszfm=1' },
+		{ label: 'Mountain View Electric Assoc.', url: 'https://forms.zohopublic.com/dave77/form/CCEFOnBillElectrifyandSaveInterestFormMountainView/formperma/JFmZ7-sYFbED03cidPhkJF2Xg6pGwaaELrG-VROL8Qs?zf_rszfm=1' },
+		{ label: 'San Luis Valley REC', url: 'https://forms.zohopublic.com/dave77/form/CCEFOnBillElectrifyandSaveInterestForm/formperma/O0v_a4kTLqUVhif9bTmfrYo5gk9MxQAjIf0nGZp2e08?zf_rszfm=1' },
+		{ label: 'Sangre de Cristo', url: 'https://forms.zohopublic.com/dave77/form/CCEFOnBillElectrifyandSaveInterestFormSangredeCris/formperma/a32FoQiHZJ3JGfZytyiSadMLVC4T41tZraNq3niYC6w?zf_rszfm=1' }
+	];
+</script>
+<script>
+	window.addEventListener('load', () => {
+		const select = document.querySelector('[data-coop-select]');
+		if (!select) return;
+		const spinner = document.querySelector('[data-loading]');
 
-<script type="text/javascript">
-	(function () {
-		try {
-			var f = document.createElement("iframe");
-			f.src = 'https://forms.zohopublic.com/dave77/form/CCEFOnBillElectrifyandSaveInterestForm/formperma/O0v_a4kTLqUVhif9bTmfrYo5gk9MxQAjIf0nGZp2e08?zf_rszfm=1'
-				; f.style.border = "none"; f.style.height = "2456px"; f.style.width = "100%";
-			f.style.transition = "all 0.5s ease";
-			f.setAttribute("aria-label", 'CCEF\x20\x2D\x20On\x2DBill\x20Electrify\x20and\x20Save\x20Interest\x20Form'
-			); var d = document.getElementById("zf_div_O0v_a4kTLqUVhif9bTmfrYo5gk9MxQAjIf0nGZp2e08");
-			d.appendChild(f); window.addEventListener('message', function () {
-				var evntData = event.data; if (evntData
-					&& evntData.constructor == String) {
-					var zf_ifrm_data = evntData.split("|"); if (zf_ifrm_data.length == 2 ||
-						zf_ifrm_data.length == 3) {
-						var zf_perma = zf_ifrm_data[0]; var zf_ifrm_ht_nw = (parseInt(zf_ifrm_data[1], 10)
-							+ 15) + "px"; var
-								iframe = document.getElementById("zf_div_O0v_a4kTLqUVhif9bTmfrYo5gk9MxQAjIf0nGZp2e08").getElementsByTagName("iframe")[0];
+		obrFormOptions.forEach(option => {
+			const opt = document.createElement('option');
+			opt.value = option.url;
+			opt.textContent = option.label;
+			select.appendChild(opt);
+
+		});
+
+		// Add event listener to log the selected option's value
+		select.addEventListener('change', (e) => {
+			if (e.target.value === '0') return;
+			spinner?.classList.remove('hidden');
+			select.remove();
+			createAndAppendIframe(e.target.value, spinner)
+		});
+
+		// Helper function to create and append iframe
+		function createAndAppendIframe(src, spinner) {
+
+			const container = document.querySelector('[data-zoho-container]');
+			if (!container) {
+				console.error('Container with data-zoho-container not found.');
+				return;
+			}
+
+			// Clear container contents
+			container.innerHTML = '';
+
+			// Create iframe
+			const iframe = document.createElement('iframe');
+			iframe.src = src;
+			iframe.classList.add('w-full', 'hidden'); // Use Tailwind classes
+
+			// Append iframe
+			container.appendChild(iframe);
+
+			// Wait for iframe to load before making it visible
+			iframe.onload = () => {
+				iframe.classList.remove('hidden');
+				spinner.remove();
+			};
+			window.addEventListener('message', function () {
+				var evntData = event.data;
+				if (evntData && evntData.constructor == String) {
+					var zf_ifrm_data = evntData.split("|");
+					if (zf_ifrm_data.length == 2 || zf_ifrm_data.length == 3) {
+						var zf_perma = zf_ifrm_data[0];
+						var zf_ifrm_ht_nw = (parseInt(zf_ifrm_data[1], 10) + 15) + "px";
+
 						if ((iframe.src).indexOf('formperma') > 0 && (iframe.src).indexOf(zf_perma) > 0) {
 							var prevIframeHeight = iframe.style.height;
 							var zf_tout = false;
@@ -366,22 +418,9 @@
 					}
 				}
 			}, false);
-		} catch (e) { }
-	})();
-</script>
-
-
-<script>
-	const toggleBtn = document.getElementById('toggle-btn');
-	toggleBtn.addEventListener('click', () => {
-		const expandableDiv = document.getElementById('expandable-div');
-		const containerSection = toggleBtn.closest('section');
-		const formFrame = containerSection.querySelector('iframe');
-		expandableDiv.style.height = formFrame.style.height;
-		toggleBtn.remove();
+		}
 	});
 </script>
-
 
 <script
 	src="https://tristate.coop/sites/default/files/asset_injector/js/swiper_9_3_2-36d6a8a781e73f708975edfc2809913b.js?sk35jq"></script>
