--- a/obr.htm
+++ b/obr.htm
@@ -129,12 +129,12 @@
 				including your spam and junk folders, for important updates and details on next steps.
 
 			</p>
-			<p>Have questions? Call <span class="inline-block">720-505-5877</span></p>
+			<p>Have questions? Call <span class="inline-block">720-263-2313</span></p>
 		</div>
 		<div class="grid place-items-center">
 			<div class="relative">
 				<select class="text-lg p-2 mt-8" data-coop-select>
-					<option value="0">Select your provider</option>
+					<option value="0">Select Your Co-Op</option>
 				</select>
 				<div class="size-8 mt-8 loading-spinner hidden" data-loading>
 
@@ -151,18 +151,6 @@
 	<section style="background-color: #F5F5F5;">
 		<div data-zoho-container></div>
 	</section>
-
-
-	<!-- Form -->
-	<section class="relative">
-		<button id="toggle-btn"
-			class="mt-4 px-4 py-2 bg-green text-white text-xl font-bold rounded-full absolute top-4 right-6">Expand</button>
-		<div class="h-96 overflow-hidden transition-[height]" id="expandable-div">
-			<div id="zf_div_O0v_a4kTLqUVhif9bTmfrYo5gk9MxQAjIf0nGZp2e08"></div>
-		</div>
-
-	</section>
-
 	<!-- Video Columns -->
 	<section class="min-h-96 bg-gray sm:grid sm:grid-cols-2">
 		<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:order-2">
@@ -294,36 +282,26 @@
 		<h2 class="ts-heading-2 font-serif text-2xl font-light text-wrap-balance" style="margin-bottom: 0;">
 			Additional Information and FAQs
 		</h2>
-	</section>
-
-	<!-- Disclaimer -->
-	<section class="px-8 py-16 text-xs!important sm:grid sm:place-content-center sm:p-16 sm:px-8 bg-gray">
-		<div class="max-w-2xl space-y-4">
-			<p>I am applying to participate in the Electrify and Save On-Bill Program (the "Program"). As part of the
-				Program, Collective Clean Energy Fund ("CCEF") needs to access 12 months of my historic utility bill
-				information. I understand that information about my utility bill will be shared with CCEF, both
-				initially to evaluate my application and on an on-going basis for as long as I am a participant in the
-				Program. I hereby authorize the utility indicated on my utility bill to release the following
-				information to CCEF and any of its representatives, agents, and contractors for the Program:</p>
-
-			<ul class="list-disc ml-6 grid gap-2">
-				<li>Information to identify my account including account numbers and identifiers for my service address.
+		<div class="cwb-accordion">
+			<ol class="list-decimal grid gap-4 ml-4">
+				<li>Be named on the account and receive electric service from a participating co-op (see list of
+					partners below).
 				</li>
-				<li>Bill history information, including prior disconnection notices, months of active service, the start
-					date and any future move-out date.</li>
-			</ul>
-			<p>Information about my utility bill will be handled confidentially by CCEF, its representatives, agents and
-				contractors for the Program. I understand that my authorization will remain effective from the date of
-				my signature until my application evaluation is complete, and for as long as I am a participant in the
-				Program and an on-bill obligation is outstanding at the service address identified above. I also
-				understand that information and data collected may be used to assess the Program’s effectiveness and
-				results, which will be anonymized and aggregated, and may be included in Program reports provided to
-				Tri-State Generation.
-			</p>
-			<p>I have read and understand the nature of this authorization.</p>
+				<li>Meet the bill-pay history criteria of the program:
+					<ul class="list-disc pl-6 grid gap-2">
+						<li>No shutoff notices for the previous 12 consecutive months.</li>
+						<li>No late penalties for the previous 6 consecutive months.</li>
+					</ul>
+				</li>
+				<li>Your proposed project must have a Scope of Work from a contractor authorized in the program and the
+					measures
+					must be on the eligible measures list.</li>
+			</ol>
+
+
 		</div>
-		<div></div>
 	</section>
+
 	<div class="fixed top-72 right-6 z-10" data-sticky><a href="#"
 			class="block items-center gap-2 rounded-full border px-4 py-2 font-normal no-underline transition-transform text-black text-center md:inline-flex">Apply
 			Now</a></div>
