Tailwind: Disable preflight
Preflight was messing up normal paragraph padding and some other stuff making it hard to use normal modules alongside tailwind modules.

--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -143,7 +143,7 @@
 				moving, we've been steadily gaining momentum.
 			</p>
 			<p><a href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2023%20Tri-State%20Annual%20Report.pdf"
-					class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline border border-black rounded-full">
+					class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline border border-solid border-black rounded-full">
 					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">
 					<span>Download the <span class="hideme lg:inline">2023 annual</span> report</span>
@@ -281,7 +281,7 @@
 			</ul>
 
 			<p><a href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2023%20Tri-State%20Annual%20Report.pdf"
-					class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline border border-black rounded-full">
+					class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline border border-solid border-black rounded-full">
 					<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
 						alt="Plus Icon" class="w-4 h-4 mt-1">
 					<span>Download the <span class="hideme lg:inline">2023 annual</span> report</span>
@@ -355,7 +355,7 @@
 		<h2 class="pb-6 font-normal leading-9 text-center text-black headline-2">Download Past Annual Reports</h2>
 		<div class="grid max-w-lg grid-flow-row gap-8 mx-auto place-content-center">
 
-			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline transition-transform border border-black rounded-full"
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline transition-transform border border-solid border-black rounded-full"
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2023%20Tri-State%20Annual%20Report.pdf"
 					target="_blank" rel="noopener"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
@@ -364,7 +364,7 @@
 					Annual Report</a></p>
 
 
-			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline transition-transform border border-black rounded-full"
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline transition-transform border border-solid border-black rounded-full"
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/2022%20Tri-State%20Annual%20Report.pdf"
 					target="_blank" rel="noopener"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
@@ -373,7 +373,7 @@
 					Annual Report</a></p>
 
 
-			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline transition-transform border border-black rounded-full"
+			<p><a class="inline-flex items-center gap-2 px-4 py-2 font-normal text-black no-underline transition-transform border border-solid border-black rounded-full "
 					href="https://tristate.coop/sites/default/files/PDF/Annual%20reports/Tri-State-Annual-Report-FY2021.pdf"
 					target="_blank" rel="noopener"><img
 						src="https://tristate.coop/sites/default/files/images/annual-report/2024/arrow-down-solid.svg"
