--- a/media.htm
+++ b/media.htm
@@ -44,7 +44,7 @@
 			box>
 			<div class="relative z-10 grid gap-8 text-xl text-white max-w-72">
 				<a href="/features"
-					class="px-8 py-4 text-2xl text-white no-underline border-2 rounded-full hover:text-white">Features</a>
+					class="px-8 py-4 text-2xl text-white no-underline border-solid border-2 rounded-full hover:text-white">Features</a>
 				<p>Stories highlighting <span class="inline-block">Tri-State</span> departments, employees, members and
 					community events</p>
 			</div>
@@ -54,7 +54,7 @@
 		<div class="relative grid gap-8 px-12 py-8 text-center aspect-[10/9] place-content-center">
 			<div class="relative z-10 grid gap-8 text-xl text-white max-w-72">
 				<a href="/resources"
-					class="px-8 py-4 text-2xl text-white no-underline border-2 rounded-full hover:text-white">Resources</a>
+					class="px-8 py-4 text-2xl text-white no-underline border-solid border-2 rounded-full hover:text-white">Resources</a>
 				<p>An in-depth understanding of our strategic priorities through education and research</p>
 			</div>
 			<img src="https://tristate.coop/sites/default/files/images/media-page/worker-at-machine-800x800.jpg"
@@ -63,14 +63,14 @@
 		<div class="relative grid gap-8 px-12 py-8 text-center aspect-[10/9] place-content-center bg-[#D0D2D4]">
 			<div class="relative z-10 grid gap-8 text-xl max-w-72">
 				<a href="/blog"
-					class="px-8 py-4 text-2xl text-black no-underline border-2 border-black rounded-full hover:text-white">Blog</a>
+					class="px-8 py-4 text-2xl text-black no-underline border-solid border-2 border-black rounded-full hover:text-white">Blog</a>
 				<p>Energy efficiency tips and seasonal topics within our industry</p>
 			</div>
 		</div>
 		<div class="relative grid gap-8 px-12 py-8 text-center aspect-[10/9] place-content-center sm:order-last">
 			<div class="relative z-10 grid gap-8 text-xl text-white max-w-72">
 				<a href="/the-current-newsletter"
-					class="px-8 py-4 text-2xl text-white no-underline border-2 rounded-full hover:text-white">The
+					class="px-8 py-4 text-2xl text-white no-underline border-solid border-2 rounded-full hover:text-white">The
 					Current</a>
 				<p>Monthly newsletter highlighting Tri-State and member news and events</p>
 			</div>
@@ -80,7 +80,7 @@
 		<div class="relative grid gap-8 px-12 py-8 text-center aspect-[10/9] place-content-center bg-[#08588D]">
 			<div class="relative z-10 grid gap-8 text-xl text-white max-w-72">
 				<a href="/News"
-					class="px-8 py-4 text-2xl text-white no-underline border-2 rounded-full hover:text-white">News</a>
+					class="px-8 py-4 text-2xl text-white no-underline border-solid border-2 rounded-full hover:text-white">News</a>
 				<p>Important announcements and time-sensitive updates from <span class="inline-block">Tri-State</span>
 				</p>
 			</div>
