--- a/obr.htm
+++ b/obr.htm
@@ -174,8 +174,7 @@
 				<strong>AM I ELIGIBLE?</strong>
 			</p>
 			<ul class="list-disc text-base ml-6 -mt-4">
-				<li> Be the owner of a property in MVEA's service territory with a
-					valid account</li>
+				<li>Be the owner of a property in a participating Co-Op service territory with a valid account</li>
 				<li> Have 12 consecutive months of payments without a shut off
 					notice</li>
 				<li> Have no late penalties for the previous 6 consecutive months,
@@ -183,7 +182,7 @@
 			</ul>
 			<p>
 				<a href="#"
-					class="block items-center gap-2 rounded-full border px-4 py-2 font-normal no-underline transition-transform text-black text-center md:inline-flex">
+					class="block items-center gap-2 border border-solid rounded-full px-4 py-2 font-normal no-underline transition-transform text-black text-center md:inline-flex">
 					Learn More
 				</a>
 			</p>
