--- a/quality-install.htm
+++ b/quality-install.htm
@@ -27,10 +27,10 @@
 		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_general_refresh-5c80b35943a0af0412d9654ed4cf5056.css?sk35jq" /> -->
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/asset_injector/css/general_rules-4adfb9f0efdb9fa703808293512b156d.css?sk35jq" />
-	<!-- <link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/block_ts_content-785a359dd81cb85e1c6dbeea859bb4d3.css?sk35jq" /> -->
-	<!-- <link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/es_2023-51ee272218bb025fbad9040e249afa66.css?sk35jq" /> -->
+	<link rel="stylesheet"
+		href="https://tristate.coop/sites/default/files/asset_injector/css/block_ts_content-785a359dd81cb85e1c6dbeea859bb4d3.css?sk35jq" />
+	<link rel="stylesheet"
+		href="https://tristate.coop/sites/default/files/asset_injector/css/es_2023-51ee272218bb025fbad9040e249afa66.css?sk35jq" />
 
 
 
@@ -81,7 +81,7 @@
 			</section>
 
 
-			<section class="px-8 py-16 text-center sm:grid sm:place-content-center hiddenXX" data-hvac>
+			<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center hiddenXX" data-hvac>
 				<div class="max-w-2xl space-y-4">
 
 					<h2 class="headline-light ts-heading-2">Contractors can receive up to $450 per HVAC installation as
@@ -105,20 +105,26 @@
 					</p>
 				</div>
 			</section>
-			<section class="ts-content hiddenXX" data-plumber>
-				<h2 class="headline-light ts-heading-2">Contractors can receive up to $450 per Heat Pump Water Heater
-					installation as a Quality
-					Install (QI) trade ally with Tri-State</h2>
+			<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center hiddenXX" data-plumber>
+				<div class="max-w-2xl space-y-4">
 
-				<p>The Tri-State Quality Install Program for Heat Pump Water Heater provides a $350 to $450 contractor
-					spiff
-					per
-					install. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, ullam. Qualifying customer
-					systems
-					must be a member of and receive electric service from one of Tri-State
-					G&amp;T’s participating cooperatives or public power district. Find a list of our member systems
-					here.
-				</p>
+					<h2 class="headline-light ts-heading-2">Contractors can receive up to $450 per Heat Pump Water
+						Heater
+						installation as a Quality
+						Install (QI) trade ally with Tri-State</h2>
+
+					<p>The Tri-State Quality Install Program for Heat Pump Water Heater provides a $350 to $450
+						contractor
+						spiff
+						per
+						install. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, ullam. Qualifying
+						customer
+						systems
+						must be a member of and receive electric service from one of Tri-State
+						G&amp;T’s participating cooperatives or public power district. Find a list of our member systems
+						here.
+					</p>
+				</div>
 			</section>
 
 
@@ -141,7 +147,7 @@
 					<div class="grid gap-8 mt-8">
 						<div class="grid gap-y-4 content-start">
 							<div
-								class="grid place-content-center mx-auto border aspect-square rounded-full size-16 text-4xl">
+								class="grid place-content-center mx-auto border border-solid aspect-square rounded-full size-16 text-4xl">
 								<span style="margin-top: -20%;">1</span>
 							</div>
 							<p>
@@ -154,7 +160,7 @@
 						</div>
 						<div class="grid gap-y-4 content-start">
 							<div
-								class="grid place-content-center mx-auto border aspect-square rounded-full size-16 text-4xl">
+								class="grid place-content-center mx-auto border border-solid aspect-square rounded-full size-16 text-4xl">
 								<span style="margin-top: -20%;">2</span>
 							</div>
 							<p>
@@ -166,7 +172,7 @@
 						</div>
 						<div class="grid gap-y-4 content-start">
 							<div
-								class="grid place-content-center mx-auto border aspect-square rounded-full size-16 text-4xl">
+								class="grid place-content-center mx-auto border border-solid aspect-square rounded-full size-16 text-4xl">
 								<span style="margin-top: -20%;">3</span>
 							</div>
 							<p>
@@ -197,7 +203,7 @@
 					<div class="grid gap-8 mt-8">
 						<div class="grid gap-y-4 content-start">
 							<div
-								class="grid place-content-center mx-auto border aspect-square rounded-full size-16 text-4xl">
+								class="grid place-content-center mx-auto border border-solid aspect-square rounded-full size-16 text-4xl">
 								<span style="margin-top: -20%;">1</span>
 							</div>
 							<p>
@@ -207,7 +213,7 @@
 						</div>
 						<div class="grid gap-y-4 content-start">
 							<div
-								class="grid place-content-center mx-auto border aspect-square rounded-full size-16 text-4xl">
+								class="grid place-content-center mx-auto border border-solid aspect-square rounded-full size-16 text-4xl">
 								<span style="margin-top: -20%;">2</span>
 							</div>
 							<p>
@@ -217,7 +223,7 @@
 						</div>
 						<div class="grid gap-y-4 content-start">
 							<div
-								class="grid place-content-center mx-auto border aspect-square rounded-full size-16 text-4xl">
+								class="grid place-content-center mx-auto border border-solid aspect-square rounded-full size-16 text-4xl">
 								<span style="margin-top: -20%;">3</span>
 							</div>
 							<p>
@@ -323,30 +329,29 @@
 
 	<script
 		src="https://tristate.coop/sites/default/files/asset_injector/js/swiper_9_3_2-36d6a8a781e73f708975edfc2809913b.js?sk35jq"></script>
-	<script>const swiper = document.querySelector('.ts-slider-esg');
-		if (swiper) {
-			new Swiper(swiper, {
-				slidesPerView: 'auto',
-				// initialSlide: 1,
-				pagination: {
-					// dots
-					el: '.swiper-pagination',
+	<script>
+		const swiperConfig = {
+			slidesPerView: 'auto',
+			pagination: {
+				el: '.swiper-pagination',
+			},
+			navigation: {
+				nextEl: '.swiper-button-next',
+				prevEl: '.swiper-button-prev',
+			},
+			breakpoints: {
+				600: {
+					centeredSlides: true,
+					initialSlide: 1,
 				},
-				navigation: {
-					// arrows
-					nextEl: '.swiper-button-next',
-					prevEl: '.swiper-button-prev',
-				},
-				breakpoints: {
-					600: {
-						centeredSlides: true,
-						initialSlide: 1,
-					},
-				},
-			});
+			},
+		};
 
-		}
+		document.querySelectorAll('.ts-slider-esg').forEach(swiper => {
+			new Swiper(swiper, swiperConfig);
+		});
 	</script>
+
 
 	<script>
 		document.querySelectorAll('[data-qi-selector]').forEach(link => {
