--- a/wildfire-mitigation.htm
+++ b/wildfire-mitigation.htm
@@ -78,7 +78,7 @@
 			</p>
 			<p>
 				<a href="https://tristate.coop/sites/default/files/PDF/resources/2024%20Tri-State%20Wildfire%20Mitigation%201-Sheeter.pdf"
-					class="inline-flex items-center gap-2 rounded-full border border-white px-4 py-2 font-normal text-white no-underline transition-transform">
+					class="inline-flex items-center gap-2 rounded-full border border-solid border-white px-4 py-2 font-normal text-white no-underline transition-transform">
 					<img src="https://tristate.coop/sites/default/files/images/icons/button-download-arrow.svg"
 						alt="down arrow" class="h-4" />
 					Wildfire Mitigation 1-Sheeter
@@ -196,7 +196,8 @@
 					or disease. We also remove trees or shrubs growing into our line and clear fire fuels beneath
 					it.
 					<br />
-					<a href="https://tristate.coop/vegetation-management-what-it-and-why-it-works">Read more about our
+					<a href="https://tristate.coop/vegetation-management-what-it-and-why-it-works"
+						class="text-inherit">Read more about our
 						program</a>
 					.
 				</p>
