--- a/quality-install.htm
+++ b/quality-install.htm
@@ -23,14 +23,14 @@
 		href="https://tristate.coop/sites/default/files/css/css_-UFRzSpfx2tStwj5bYydlkhBR3LXL-MLhjJ2dqKU_nw.css" />
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_standards-c73c2df017737ccf23698c0b0736a119.css?sgj5sc" />
-	<!-- <link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_general_refresh-5c80b35943a0af0412d9654ed4cf5056.css?sk35jq" /> -->
+	<link rel="stylesheet"
+		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_general_refresh-5c80b35943a0af0412d9654ed4cf5056.css?sk35jq" />
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/asset_injector/css/general_rules-4adfb9f0efdb9fa703808293512b156d.css?sk35jq" />
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/asset_injector/css/block_ts_content-785a359dd81cb85e1c6dbeea859bb4d3.css?sk35jq" />
-	<link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/es_2023-51ee272218bb025fbad9040e249afa66.css?sk35jq" />
+	<!-- <link rel="stylesheet"
+		href="https://tristate.coop/sites/default/files/asset_injector/css/es_2023-51ee272218bb025fbad9040e249afa66.css?sk35jq" /> -->
 
 
 
@@ -55,12 +55,71 @@
 		<div class="block-region-content">
 
 			<section class="bg-green flex flex-row">
-				<div class="bg-connections-l bg-repeat-y w-[15%] min-w-8 max-w-40 bg-[length:100%]"></div>
+				<div class="bg-connections-l bg-repeat-y basis-[15%] min-w-8 bg-[length:100%]"></div>
 				<div class="box-border flex-grow flex-shrink text-center min-h-60 px-8 py-12 md:py-16 md:text-balance">
 					<h1 class="text-2xl md:text-4xl text-white my-4">Quality Install Program</h1>
 				</div>
-				<div class="bg-connections-r bg-repeat-y bg-right w-[15%] min-w-8 max-w-40 bg-[length:100%]"></div>
+				<div class="bg-connections-r bg-repeat-y bg-right basis-[15%] min-w-8 bg-[length:100%]"></div>
 			</section>
+			<section class="bg-gray flex flex-row" data-hvac>
+				<div class="bg-connections-l-grey bg-repeat-y basis-[15%] min-w-8 bg-[length:100%] opacity-40"></div>
+				<div
+					class="box-border flex-grow flex-shrink text-center min-h-60 max-w-[70%] px-8 py-12 md:py-16 md:text-balance">
+					<h2 class="headline-2  headline-light ts-heading-2 ts-text-center">Apply to the QI program through
+						one
+						of
+						the
+						options below</h2>
+
+					<p>If accepted, you agree to be listed on Tristate.coop, LoveElectric.org and/or participating
+						member
+						websites.
+						You also agree to annual program updates and future requirements to maintain program approval.
+					</p>
+
+					<div class="grid gap-8 mt-8">
+						<div class="grid gap-y-4 content-start">
+							<div
+								class="grid place-content-center mx-auto border border-solid aspect-square rounded-full size-16 text-4xl">
+								<span style="margin-top: -20%;">1</span>
+							</div>
+							<p>
+								Take an approved air source heat pump course from a manufacturer or training provider
+								and
+								email
+								to
+								<a href="mailto:peter.rusin@tristategt.org">peter.rusin@tristategt.org</a>
+							</p>
+						</div>
+						<div class="grid gap-y-4 content-start">
+							<div
+								class="grid place-content-center mx-auto border border-solid aspect-square rounded-full size-16 text-4xl">
+								<span style="margin-top: -20%;">2</span>
+							</div>
+							<p>
+								Verify you are approved by PRPA's Efficiency Works Program or on Xcel Colorado's Heat
+								Pump
+								Contractor list by sending a screenshot to <a
+									href="mailto:peter.rusin@tristategt.org">peter.rusin@tristategt.org</a>
+							</p>
+						</div>
+						<div class="grid gap-y-4 content-start">
+							<div
+								class="grid place-content-center mx-auto border border-solid aspect-square rounded-full size-16 text-4xl">
+								<span style="margin-top: -20%;">3</span>
+							</div>
+							<p>
+								Watch the 4 module training videos below and answer the questionnaire on this webpage.
+							</p>
+						</div>
+					</div>
+
+
+				</div>
+				<div class="bg-connections-r-grey bg-repeat-y bg-right basis-[15%] min-w-8 bg-[length:100%] opacity-40">
+				</div>
+			</section>
+
 			<section class="px-8 py-16 text-center sm:grid sm:place-content-center hiddenXX" data-hvac>
 				<div class="max-w-2xl mx-auto space-y-4">
 					<h1 class="text-xl md:text-3xl my-4 font-light">Heading Here?</h1>
